# anchor-note

./: .gitignore  CHANGELOG.md  LICENSE.md  MANIFEST.in  README.md  requirements-dev.txt  requirements.txt  setup.cfg
.github/workflows/: build-android.yml  build-windows.yml  signing.yml  workflow.yml
anchor_note/: __init__.py
anchor_note/core/: __init__.py  alerts.py  calendar_sync.py  checklist.py  scheduler.py  settings.py
anchor_note/platform/: __init__.py  cli.py  gui_agent.py  kivy_app.py  windows_service_socket.py
anchor_note/utils/: __init__.py  audio.py  logging.py  time_utils.py
android/: main.py
android/google-play/: README.md
android/google-play/changelogs/: README.md
android/kivy_assets/icons/: README.md
android/kivy_assets/kv/: main.kv
pypi_tool/: __init__.py  main.py
windows/: AnchorNoteInstaller.iss  README.md  install_anchornote.ps1
