[metadata]
name = anchor-note
version = 0.1.0
description = Persistent reminders & checklist syncer (Thunderbird / CalDAV / Google) with persistent red-alerts
long_description = file: README.md
long_description_content_type = text/markdown
author = Adityakrishna SreeRamachandrarao, Anusha Lakshmi Dharmavathi
author_email = adityadronamraju20@gmail.com
license = MIT
#url = https://example.org/anchor-note
keywords = reminders,calendar,caldav,thunderbird,medication,task

[options]
packages = find:
include_package_data = True
install_requires =
    ics>=0.7
    apscheduler>=3.6
    plyer>=2.0
    pygame>=2.0
    caldav>=0.9
    google-auth>=2.0
    google-auth-oauthlib>=0.4
    google-api-python-client>=2.0
    tzlocal>=4.0
python_requires = >=3.9

[options.extras_require]
windows =
    pywin32>=305; platform_system == "Windows"

[options.entry_points]
console_scripts =
    anchor-note = anchor_note.platform.cli:main
